--- a/agents_course_homework_week_1.ipynb
+++ b/agents_course_homework_week_1.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "### 2: Make evaluation set\n",
     "\n",
-    "My evaluation set is the Times crossword number 29263, published on 23/06/2024. I set up the clues and answers as dspy examples. \n",
+    "My evaluation set is the Times crossword number 29263, published on 23/06/2024 (from https://timesforthetimes.co.uk/). I set up the clues and answers as dspy examples. \n",
     "\n",
     "My main validation metric is a case-insensitive check that the answers are the same length. (All clues have 1-word answers so we don't need to worry about spaces here).\n",
     "\n",
