--- a/agents_course_homework_week_1.ipynb
+++ b/agents_course_homework_week_1.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "The *charade* is venomous creature - SCORPION. The *indicator* is \"losing tail\" - indicating that it is missing the final letter. The answer is SCORPIO - the (star) sign. \n",
     "\n",
-    "Charades, indicators and definitions are frequently reused in cryptic clues (e.g. \"worker\" usually means ANT or BEE). To solve a cryptic crossowrd it is important to be familiar with these recurring elements. My idea was to give an Agent tools to search a database of previous charades, indicators and definitions, to better solve cryptic clues. "
+    "Charades, indicators and definitions are frequently reused in cryptic clues (e.g. \"worker\" usually means ANT or BEE). To solve a cryptic crossword it is important to be familiar with these recurring elements. My idea was to give an Agent tools to search a database of previous charades, indicators and definitions, to better solve cryptic clues. "
    ]
   },
   {
